fix landscape on mobile

--- a/style.css
+++ b/style.css
@@ -167,6 +167,85 @@ b {
   }
 }
 
+@media  (min-width: 661px) and (orientation: landscape) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh
+  }
+
+  main {
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+
+    margin: auto;
+    border-radius: 1.5rem;
+    box-shadow: 5px 10px 10px 10px var(--cobalt-blue-transparent);
+  }
+
+  main > * {
+    flex: 1;  
+    width: 100%;
+    padding: 1rem 1rem;
+  }
+
+  .result {
+    border-radius: 1.5rem;
+    text-align: center;
+  }
+
+  .result > h2:first-child {
+    font-size: 0.8rem;
+  }
+
+  .result > .circle > h1 {
+    font-size: 2.6rem
+  }
+  
+  .result > h3 {
+    font-size: 1.3rem;
+    margin: 0.6rem 1rem
+  }
+
+  .result > p {
+    font-size: 0.75rem;
+  }
+
+  .circle {
+    background-image: linear-gradient(var(--violet-blue), var(--persian-blue));
+    border-radius: 100%;
+    width: 6.875rem;
+    height: 6.875rem;
+
+    margin: 1rem auto 1.2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  ul > li {
+    font-size: 0.8rem;
+    margin: 0.6rem 0;
+  }
+
+  ul > li > img {
+    margin-right: 0.6rem;
+  }
+
+  .summary > h2 {
+    font-size: 0.8rem;
+  }
+
+  button {
+    width: 100%;
+    margin: 1.2rem 0 0.8rem;
+    border-radius: 2.8rem;
+  }
+}
+
 /* 1440px */
 @media (min-width: 1440px) {
   body {
